# TextEngine

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  TXT_engine.sln
TXT_engine/: Source.cpp  TXT_engine.vcxproj  TXT_engine.vcxproj.filters  button.h  display.cpp  display.h  miscellaneous.h  screen.cpp  screen.h  sprite.h  txt_engine_elements.h
include/TXT_engine/: Txt_Engine.h
src/: button.cpp  display.cpp  miscellaneous.cpp  screen.cpp  sprite.cpp
